# Practical-RIFE

./: .gitignore  Dockerfile  inference_video.py  pyproject.toml
.github/workflows/: github.yaml
