[project]
name = "practical-rife"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=1.0.3",
    "numpy>1.19",
    "opencv-python>=4.1.2",
    "sk-video>=1.1.10",
    "torch>=1.3.0",
    "torchvision>=0.7.0",
    "tqdm>=4.35.0",
]
